--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "start": "next start -p 3000",
+    "start": "next start",
     "build": "next build",
     "server": "node server.js",
     "next-server": "next start -p 3001",
