--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "start": "next start -p ${PORT:-3000}",
+    "start": "node scripts/start-apppass.js",
     "start:apppass": "node scripts/start-apppass.js",
     "build": "next build",
     "server": "node server.js",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@prisma/client": "^6.14.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
@@ -27,8 +28,10 @@
     "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
+    "mysql2": "^3.14.3",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
+    "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
