fix: 프로세스 관리 개선 및 메모리 누수 방지
- 프로세스 종료 시그널 처리 추가 (SIGTERM, SIGINT)
- 예상치 못한 오류 처리 (uncaughtException, unhandledRejection)
- execSync → spawn으로 변경하여 프로세스 관리 개선
- detached: false로 설정하여 부모 프로세스와 함께 종료
- 프로세스 정리 스크립트 추가 (clean, kill)
- 메모리 누수 및 고아 프로세스 방지

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "server": "node server.js",
     "next-server": "next start -p 3001",
     "client": "next dev",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean": "rm -rf .next && rm -rf node_modules/.cache",
+    "kill": "pkill -f 'node.*start-apppass' || pkill -f 'next.*start' || echo 'No processes found'"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
