fix: 빌드 명령어를 npx next build로 수정하여 호스팅 환경에서 정상 작동하도록 개선

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3000",
     "start": "node scripts/start-apppass.js",
     "start:apppass": "node scripts/start-apppass.js",
-    "build": "next build",
+    "build": "npx next build",
     "server": "node server.js",
     "next-server": "next start -p 3001",
     "client": "next dev",
